AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
.tab-panel-container {
    margin-top: 25px; 
    position: relative;
}

span {
    display: block;
}
.left-arrow{
    left:-25px;
}
.right-arrow{
    right:-25px;
}

.tab-header-col-md-1 {
    float: left;
    min-height: 66px;
    padding-top: 19px;
    position:absolute;
}

.tab-header-col-md-10 {
    width: 100%;
    float: left;
    overflow: hidden; /* used for carousel*/
    margin-bottom: 10px;
}


.tabs-container {
    width: 100%;
    margin-left: -15px;
    margin-right: -15px;
}

.tabs {
    width: 4000px;
}

    .tabs > .tab {
        position: relative;
        padding: 12px;
        font-size: 16px;
        display: block;
        float: left;
        line-height: 45px;
        background-color: #e0dede;
        margin: 0 10px;
        min-width: 150px;
        text-align: center;
    }

.tab-text {
    font-family: myriadpro-regular;
}

ul {
    list-style-type: none;
}

.arrow-sign {
    font-size: 23px;
    font-weight: 600;
    background-color: white;
    padding: 0;
}

a {
    color: #706f6f;
    text-decoration: none;
    cursor: pointer;
    line-height: 65px;
    outline: 0;
}

.tab-inside {
    border-radius: 0;
    background-color: #ededed;
    margin: 0 10px;
    min-width: 150px;
}

.tabs > .active, .tabs > .active:hover, .tabs > .active:focus {
    background-color: #fdbc1e;
}

    .tabs > .active > a, .tabs > .active > a:hover, .tabs > .active > a:focus {
        color: white;
    }

